import "goby/common/option_extensions.proto";


message CustomMsg
{
  option (goby.msg).dccl.id = 3;
  option (goby.msg).dccl.max_bytes = 256;
  option (goby.msg).dccl.codec = "custom_codec";
  
  optional uint32 a = 1;
  optional bool b = 2;
}


message CustomMsg2
{
  option (goby.msg).dccl.id = 4;
  option (goby.msg).dccl.max_bytes = 256;

  optional CustomMsg msg = 1;
}

